// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="ButtonGroup-root"
    >
      <button
        class="MuiButtonBase-root Component-basic Component-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Component-children"
        >
          «
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-basic Component-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Component-children"
        >
          ⟨
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-basic Component-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Component-children"
        >
          ...
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-basic Component-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Component-children"
        >
          2
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-basic Component-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Component-children"
        >
          3
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-basic Component-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Component-children"
        >
          4
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-primary Component-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Component-children"
        >
          5
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-basic Component-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Component-children"
        >
          6
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-basic Component-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Component-children"
        >
          7
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-basic Component-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Component-children"
        >
          8
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-basic Component-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Component-children"
        >
          ...
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-basic Component-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Component-children"
        >
          ⟩
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-basic Component-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Component-children"
        >
          »
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders disabled 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="ButtonGroup-root"
    >
      <button
        class="MuiButtonBase-root Component-basic Component-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Component-children"
        >
          «
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-basic Component-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Component-children"
        >
          ⟨
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-basic Component-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Component-children"
        >
          ...
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-basic Component-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Component-children"
        >
          2
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-basic Component-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Component-children"
        >
          3
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-basic Component-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Component-children"
        >
          4
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-primary Component-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Component-children"
        >
          5
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-basic Component-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Component-children"
        >
          6
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-basic Component-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Component-children"
        >
          7
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-basic Component-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Component-children"
        >
          8
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-basic Component-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Component-children"
        >
          ...
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-basic Component-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Component-children"
        >
          ⟩
        </div>
      </button>
      <button
        class="MuiButtonBase-root Component-basic Component-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Component-children"
        >
          »
        </div>
      </button>
    </div>
  </div>
</div>
`;
